--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ alembic = "^1.13.2"
 psycopg2-binary = "^2.9.9"
 asyncpg = "^0.29.0"
 bcrypt = "^4.1.3"
+fastapi-cache = "^0.1.0"
+redis = "^5.0.7"
+fastapi-cache2 = "^0.2.1"
 
 
 [build-system]
