--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,14 @@ aiosmtplib = "^3.0.1"
 alembic = "^1.13.2"
 psycopg2-binary = "^2.9.9"
 asyncpg = "^0.29.0"
-bcrypt = "^4.1.3"
+bcrypt = "4.0.1"
 fastapi-cache = "^0.1.0"
 redis = "^5.0.7"
 fastapi-cache2 = "^0.2.1"
+google-auth = "^2.32.0"
+google-auth-oauthlib = "^1.2.1"
+google-auth-httplib2 = "^0.2.0"
+google-api-python-client = "^2.137.0"
 
 
 [build-system]
